# wovoka

./: .gitignore  LICENSE  Makefile  Makefile_old  README.md  TODO.txt  baseline.db  cdrcfg.db  cdrgen.db  commit.sh  config.db  config.yaml  costs.py  countries.py  data.db  database.db  demo.py  docker-compose.yml  example.db  go.mod  go.sum  locations.db  main.go  main.py  main_v1.py  mydb.db  network_data.db  network_technologies.db  requirements.txt  scaffold.sh  test.db  test.py  test_costs.py  test_v01.py
.github/workflows/: go.yml  loader-service.yml  main.yml  work.yml  wovoka.yml
DOCS/: README.md  mermaid-archi-components.txt  work.txt
DOCS/assets/: adr.md  api.md
XXX/: commit.sh
_OLD/v01/: docker-compose_v01.yml  init_v01.sql
_OLD/v02/: docker-compose.yml
_OLD/v03/: docker-compose.yml
_OLD/v04/: index.html  main.py
_OLD/v05/: docker-compose.yml
_archive_cdrgen/: Makefile  commit.sh  config.yaml  go.mod
cmd/: main.go
configurator/: mydb.db
configurator-service/: .env_exemple  .gitignore  Cargo.toml  work.md
configurator-service/config/: development.toml
configurator-service/deployments/docker/scripts/init-db/: 01_init.sql  02_config.sql
configurator-service/src/: lib.rs  main.rs
configurator-service/src/api/: connector_type_handlers.rs  mod.rs  openapi.rs  routes.rs
configurator-service/src/api/dtos/: companies.rs  mod.rs  networks.rs  points.rs  stations.rs
configurator-service/src/api/handlers/: companies.rs  networks.rs  stations.rs
configurator-service/src/application/: connector_type_dto.rs
configurator-service/src/application/commands/: companies.rs  mod.rs  networks.rs  stations.rs
configurator-service/src/application/queries/: companies.rs  mod.rs  networks.rs  stations.rs
configurator-service/src/domain/: connector_type_repo.rs  repositories.rs  value_objects.rs
configurator-service/src/domain/entities/: companies.rs  networks.rs  stations.rs
configurator-service/src/infrastructure/: config.rs  database.rs  logger.rs  mod.rs
configurator-service/src/infrastructure/repositories/: companies.rs  mod.rs  networks.rs  stations.rs
configurator-service/src/shared/: constants.rs  errors.rs
configurator-service_v01/: .env.example  README.md
configurator-service_v03/: Cargo.toml
configurator-service_v03/src/: lib.rs  main.rs
configurator-service_v03/src/api/: mod.rs  openapi.rs
configurator-service_v03/src/api/dtos/: connector_status_dto.rs  connector_type_dto.rs  mod.rs  station_dto.rs
configurator-service_v03/src/api/handlers/: connector_status_handler.rs  connector_type_handler.rs  mod.rs  station_handler.rs
configurator-service_v03/src/api/routes/: connector_status_routes.rs  mod.rs  station_routes.rs
configurator-service_v03/src/application/commands/: connector_status_commands.rs  connector_type_commands.rs  mod.rs  station_commands.rs
configurator-service_v03/src/application/queries/: connector_status_queries.rs  connector_type_queries.rs  mod.rs  station_queries.rs
configurator-service_v03/src/domain/: connector_status.rs  connector_type.rs  mod.rs  station.rs
configurator-service_v03/src/infrastructure/: cache.rs  database.rs  logger.rs  mod.rs
configurator-service_v03/src/infrastructure/repositories/: connector_status_repo.rs  connector_type_repo.rs  mod.rs  station_repo.rs
configurator-service_v03/src/shared/: config.rs  constants.rs  errors.rs  mod.rs
configurator-service_v04/: Cargo.toml
db/: mydb.db
demo/: demo.py
everest/: notes.txt  scaffold.sh  scaffold_v01.sh
everest/configurator-service/: Cargo.toml
everest/configurator-service/src/: errors.rs  lib.rs  main.rs
everest/configurator-service/src/application/dtos/: health.rs  user.rs
everest/configurator-service/src/application/handlers/: health.rs  mod.rs  user.rs
everest/configurator-service/src/interfaces/http/: handlers.rs  health.rs  mod.rs  openapi.rs
jupyter/: docker-compose.yml
loader-service/: README.md
notebooks/: Dockerfile  docker-compose.yml
source/: README.md  create-secrets.sh  docker-compose.yml  docker-compose_v01.yml  scraper_v01.py  tyk.standalone.conf
source/auth-service/: Cargo.toml  README.md
source/auth-service/config/: default.toml  development.toml
source/auth-service/deployments/docker/: Dockerfile  docker-compose.yml
source/auth-service/scripts/: build.sh  run.sh
source/auth-service/src/: config.rs  lib.rs  logger.rs  main.rs
source/auth-service/src/api/: controllers.rs  middleware.rs  mod.rs  openapi.rs  routes.rs
source/auth-service/src/application/: commands.rs  dtos.rs  mod.rs  queries.rs  services.rs
source/auth-service/src/domain/: entities.rs  mod.rs  permission.rs  repositories.rs  role.rs  services.rs  token.rs  user.rs
source/auth-service/src/infrastructure/: cache.rs  keycloak.rs  mod.rs
source/auth-service/src/shared/: constants.rs  error.rs  mod.rs  result.rs  types.rs
source/source/auth-service/: Cargo.toml
source/source/auth-service/src/: config.rs  errors.rs  lib.rs  main.rs
source/source/auth-service/src/domain/: user.rs
source/source/auth-service/src/handlers/: auth_handler.rs
source/source/auth-service/src/infra/: logger.rs
source/source/auth-service/src/repositories/: cache_repo.rs  keycloak_repo.rs  mod.rs
source/source/auth-service/src/services/: auth_service.rs
source_latest/: docker-compose.yml
src/: demo.py  entities.py  main.py  main_v1.py  main_v2.py  main_v3.py  main_v4.py  models.py  user.py  user_repository.py  user_uc_interractor.py
tests/: conftest.py  test_costs.py  test_demo.py  test_main.py  test_organization.py  test_resource.py  test_resource_serializer.py  test_usage.py  test_usecase_periods_interval_load.py  test_user_entity.py
tools/: test.py  test_v01.py  test_v02.py
work/: .~c9_invoke_dUBAHp.py  Makefile  Makefile_old  README.md  _catalog.json  _store.json  aws_data.csv  demo.py  main.py  main_v1.py  main_v2.py  main_v3.py  requirements.txt
work/20251119/configurator-service/: .gitignore  Cargo.toml  README.md
work/20251119/configurator-service/scripts/: deploy.sh  migrate.sh  test.sh
(+665 files in other folders)
