[package]
name = "configurator-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
env_logger = "0.11.8"
log = "0.4.28"
utoipa = { version = "5.4.0", features = ["uuid", "chrono", "actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
serde_json = "1.0.145"
dotenvy = "0.15.7"