[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"
description = "auth service"
authors = ["M.MEZNI <mamezni@gmail.com>"]
license = "MIT"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.15" # For query string parsing

# Configuration management
config = "0.13"
dotenvy = "0.15" # For .env file support

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-actix-web = "0.7"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0" # For application-level errors

# Async traits
async-trait = "0.1"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for Keycloak integration
reqwest = { version = "0.12.24", features = ["json"] }

# JWT token handling - FIXED: Added required crypto backend
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

# Password hashing
argon2 = "0.5"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# OpenAPI/Swagger documentation
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

# Authentication middleware
actix-web-httpauth = "0.8"

# Caching - FIXED: Added required features
moka = { version = "0.12", features = ["sync"] }

# Rate limiting (optional, for future use)
governor = "0.6"

[dev-dependencies]
# Testing
wiremock = "0.5"
testcontainers = "0.15"
tokio-test = "0.4"

# HTTP testing - FIXED: Use same version as main dependency
reqwest = { version = "0.12.24", features = ["json"] }

# Serialization for tests
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Additional testing utilities
rstest = "0.18"
fake = "2.4"
