[package]
name = "configurator-service"
version = "0.1.0"
edition = "2021"
description = "EV Station Management System"
authors = ["M.MEZNI <mamezni@gmail.com>"]
license = "MIT"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
config = "0.13"
dotenvy = "0.15"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
utoipa = { version = "3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.0", features = ["actix-web"] }
validator = { version = "0.16", features = ["derive"] }
argon2 = "0.5"
jsonwebtoken = "8.3"

[dev-dependencies]
rstest = "0.18"
mockall = "0.11"
testcontainers = "0.15"
